# jsse

./: .gitignore  .gitmodules  .semgrepignore  BENCHMARK-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  PLAN.md  README.md  benchmark-engine262-results.json  benchmark-results-baseline.json  benchmark-results-phase1-jsse.json  benchmark-results-phase2-jsse.json  benchmark-results-phase2.txt  benchmark-results-phase3-jsse.json  benchmark-suites-results.json  deny.toml  staging.md  test262-pass.txt
.cargo/: mutants.toml
.claude/: settings.json
.github/: dependabot.yml  zizmor.yml
benchmarks/: plot_results.py  results.csv  run_benchmarks.sh
docs/: architecture.md  boa-comparison-report.md  data.md
plan/: TEMPORAL.md  acorn-testsuite.md  annexb-ishtmldda.md  arraybuffer-getters.md  blog-post-data.md  ccusage_daily.json  class-remaining-tasks.md  close-gaps-map-number-math.md  cross-realm-impl.md  cross-realm.md  generator-suspended-context.md  next-60-percent.md  performance.md  phase-01-infrastructure.md  phase-02-types.md  phase-03-lexer.md  phase-04-parser.md  phase-05-runtime.md  phase-06-evaluation.md  phase-07-functions-classes.md  phase-08-modules.md  phase-09-builtins.md  phase-10-advanced.md  property-descriptor-fixes.md  strict-mode-fixes.md  symbol-species.md  typedarray-rab.md  zero-failures-plan.md
research/: third-party-testsuites.md
scripts/: README.md  acorn-shim.js  analyze-benchmarks.py  analyze-phase-results.py  benchmark-engines.py  fmt-hook.sh  gen-ajv-entry.js  gen-css-tree-entry.js  gen-esprima-fixtures.js  lint.sh  (+55 more)
(+289 files in other folders)
