[package]
name = "jsse"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
num-bigint = "0.4"
unicode-ident = "1.0"
regex = "1"
fancy-regex = "0.14"
chrono = "0.4"
ryu-js = "1.0.2"
iana-time-zone = "0.1"
chrono-tz = "0.10"
icu = { version = "2.0", features = ["experimental"] }
fixed_decimal = { version = "0.7", features = ["ryu"] }
